--- a/src/Components/CSS/Testimonial.css
+++ b/src/Components/CSS/Testimonial.css
@@ -7,6 +7,23 @@
     color: #2d3748;
 }
 
+.review-btn{
+    background-color: teal;
+    color: white;
+    border: 1px solid white;
+    border-radius: 7px;
+    width: 5rem;
+    font-weight: 500;
+    transition: all 0.5s;
+}
+
+.review-btn:hover{
+    color: teal;
+    background-color: white;
+    border: 1px solid teal;
+    box-shadow: 5px 5px 10px 0px gray;
+}
+
 .testi-gradient {
     background-image: linear-gradient(45deg, rgb(127, 0, 0), rgba(127, 0, 0, 0.501) 30%, white 60%);
     -webkit-background-clip: text;
