--- a/src/Components/CSS/Book.css
+++ b/src/Components/CSS/Book.css
@@ -12,9 +12,61 @@
     background-color: white;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
     border-radius: 24px;
+    z-index: 30;
 }
 
-.page.page-cover {
+.about-gradient {
+    background-image: linear-gradient(45deg, rgb(127, 0, 0), rgba(127, 0, 0, 0.501) 30%, white 60%);
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-size: 400%;
+    background-position: 0%;
+}
+
+.about-heading {
+    font-size: 3rem;
+    font-weight: 700;
+    line-height: 1.2;
+    text-align: center;
+    margin-bottom: 2rem;
+    color: #2d3748;
+}
+
+.about-div{
+    width: 50%;
+    position: absolute;
+    align-items: center;
+    margin: 0 auto;
+    text-align: center;
+    margin-top: 12rem;
+}
+
+.f-page{
+    background-color: rgb(0, 49, 129);
+    text-align: center;
+    align-items: center;
+}
+.book-cover-logo{
+    width: 50%;
+    height: 7rem;
+    margin: 0 auto;
+    margin-top: 5rem;
+    margin-bottom: 4rem;
+    display: flex;
+    justify-content: center;
+}
+.book-left-page{
+    background-color: white;
+}
+.book-right-page{
+    background: rgb(0, 49, 129);
+    color: white;
+    padding: 2rem;
+    z-index: 11;
+}
+
+.page .page-cover {
     background-color: rgb(0, 49, 129);
     /* box-shadow: inset 0 0 30px 0 rgba(0, 0, 0, 0.3), -2px 0 5px rgba(0, 0, 0, 0.2); */
 }
@@ -26,15 +78,4 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: stretch;
-}
-
-/* Add some paper texture */
-.page {
-    /* background-image:
-        linear-gradient(rgba(255, 255, 255, .3) 2px, transparent 2px),
-        linear-gradient(90deg, rgba(255, 255, 255, .3) 2px, transparent 2px),
-        linear-gradient(rgba(255, 255, 255, .3) 1px, transparent 1px),
-        linear-gradient(90deg, rgba(255, 255, 255, .3) 1px, transparent 1px);
-    background-size: 100px 100px, 100px 100px, 20px 20px, 20px 20px;
-    background-position: -2px -2px, -2px -2px, -1px -1px, -1px -1px; */
 }
