--- a/src/Components/CSS/Book.css
+++ b/src/Components/CSS/Book.css
@@ -46,6 +46,8 @@
     background-color: rgb(0, 49, 129);
     text-align: center;
     align-items: center;
+    border: 2px solid gray;
+    border-radius: 24px;
 }
 .book-cover-logo{
     width: 50%;
@@ -58,9 +60,14 @@
 }
 .book-left-page{
     background-color: white;
+    border-radius: 24px;
+    border: 2px solid gray;
+
 }
 .book-right-page{
+    border: 2px solid gray;
     background: rgb(0, 49, 129);
+    border-radius: 24px;
     color: white;
     padding: 2rem;
     z-index: 11;
