--- a/src/Components/CSS/Book.css
+++ b/src/Components/CSS/Book.css
@@ -4,7 +4,7 @@
     align-items: center;
     margin: 0 auto;
     border-radius: 24px;
-    overflow: hidden;
+    /* overflow: hidden; */
     height: 500px;
 }
 
@@ -48,6 +48,7 @@
     align-items: center;
     border: 2px solid gray;
     border-radius: 24px;
+    box-shadow: 15px 15px 25px 0px gray;
 }
 .book-cover-logo{
     width: 50%;
