--- a/src/Components/CSS/Header.css
+++ b/src/Components/CSS/Header.css
@@ -333,7 +333,7 @@
     display: none !important;
 } */
 
-@media screen and (min-width: 1450px) {
+@media screen and (max-width: 1430px) {
     .topbar {
         width: 25%;
     }
