--- a/src/Components/CSS/About.css
+++ b/src/Components/CSS/About.css
@@ -1,4 +1,4 @@
-.Dimond-heading, .Team-heading{
+.Team-heading {
     font-size: 3rem;
     font-weight: 700;
     line-height: 1.2;
@@ -7,7 +7,7 @@
     color: #2d3748;
 }
 
-.Dimond-gradient, .Team-gradient {
+.Team-gradient {
     background-image: linear-gradient(45deg, rgb(127, 0, 0), rgba(127, 0, 0, 0.501) 30%, white 60%);
     -webkit-background-clip: text;
     background-clip: text;
@@ -16,20 +16,182 @@
     background-position: 0%;
 }
 
-@media screen and (max-width: 991px) {
-    .Dimond-heading, .Team-heading{
+
+@media (max-width: 375px) {
+    .aboutus-dimond{
+        padding-top: 5rem;
+    } 
+
+    .Team-heading {
         font-size: 2rem;
     }
-    .dimond-text{
+
+    .dimond-text {
         font-size: 1rem;
+    }
+
+    .hero-section {
+        height: 50vh;
+    }
+
+    .div-info {
+        padding-top: 2rem;
     }
 }
 
-@media screen and (max-width: 640px) {
-    .Dimond-heading{
+@media (min-width: 376px) and (max-width: 480px) {
+    .aboutus-dimond{
+        padding-top: 5rem;
+    } 
+    .Team-heading {
+        font-size: 3rem;
+    }
+
+    .dimond-text {
+        font-size: 1rem;
+    }
+
+    .hero-section {
+        height: 50vh;
+    }
+
+    .div-info {
+        padding-top: 2rem;
+    }
+}
+
+@media (min-width: 481px) and (max-width: 640px) {
+    .aboutus-dimond{
+        padding-top: 5rem;
+    } 
+    .Team-heading {
+        font-size: 3.5rem;
+    }
+
+    .dimond-text {
+        font-size: 1rem;
+    }
+
+    .hero-section {
+        height: 50vh;
+    }
+
+    .div-info {
+        padding-top: 2rem;
+    }
+}
+
+@media (min-width: 641px) and (max-width: 767px) {
+    .aboutus-dimond{
+        padding-top: 5rem;
+    } 
+    .Team-heading {
+        font-size: 4rem;
+    }
+
+    .dimond-text {
         font-size: 1.5rem;
     }
-    .dimond-text{
-        font-size: 12px;
+
+    .hero-section {
+        height: 50vh;
+    }
+
+    .div-info{
+        padding-top: 2rem;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+    .aboutus-dimond{
+        padding-top: 5rem;
+    } 
+
+    .Team-heading {
+        font-size: 4rem;
+    }
+
+    .dimond-text {
+        font-size: 1.5rem;
+    }
+
+    .hero-section {
+        height: 50vh;
+    }
+
+    .div-info{
+        padding-top: 2.5rem;
+    }
+}
+
+@media (min-width: 1025px) and (max-width: 1280px) {
+    .aboutus-dimond{
+        padding-top: 7.2rem;
+    } 
+
+    .Team-heading {
+        font-size: 4rem;
+    }
+
+    .dimond-text {
+        font-size: 1.5rem;
+    }
+
+
+    .div-info{
+        padding-top: 2.5rem;
+    }
+}
+
+@media (min-width: 1281px) and (max-width: 1440px) {
+    .aboutus-dimond{
+        padding-top: 7rem;
+    } 
+
+    .Team-heading {
+        font-size: 4rem;
+    }
+
+    .dimond-text {
+        font-size: 1.5rem;
+    }
+
+    .div-info{
+        padding-top: 2.5rem;
+    }
+}
+
+@media (min-width: 1441px) and (max-width: 1920px) {
+    .aboutus-dimond{
+        padding-top: 8.5rem;
+    }    
+
+    .Team-heading {
+        font-size: 4rem;
+    }
+
+    .dimond-text {
+        font-size: 1.5rem;
+    }
+
+    .div-info{
+        padding-top: 2.5rem;
+    }
+}
+
+@media (min-width: 1921px) {
+    .aboutus-dimond{
+        padding-top: 12rem;
+    }
+    .Team-heading {
+        font-size: 4rem;
+    }
+
+    .dimond-text {
+        font-size: 1.5rem;
+    }
+
+    .div-info{
+        padding-top: 2.5rem;
     }
 }
