--- a/src/Components/CSS/Achievement.css
+++ b/src/Components/CSS/Achievement.css
@@ -1,4 +1,4 @@
-.achi-gradient {
+.achievement-gradient {
     background-image: linear-gradient(45deg, rgb(127, 0, 0), rgba(127, 0, 0, 0.501) 30%, white 60%);
     -webkit-background-clip: text;
     background-clip: text;
@@ -15,64 +15,56 @@
     margin-bottom: 2rem;
     color: #2d3748;
 }
-
-.achi-sec {
-    display: flex;
-    justify-content: space-between;
-    margin: 0 auto;
-    width: 80%;
-}
-.achi-img{
-    width: 80%;
-    margin: 0 auto;
-    margin-bottom: 1rem;
-}
-.achi-div{
-    padding: 10px;
-    text-align: center;
-    width: 40%;
-    height: auto;
-    border: none;
-    border-radius: 10px;
-
-    transition: all 1s;
-    margin: 0 auto;
-    border: 1px solid rgba(128, 128, 128, 0.23);
-}
-
-.achi-div:hover{
-    box-shadow: 5px 5px 10px 1px gray;
-    margin-top: -1rem;
-}
-
-.achi-div1, .achi-div2{
-    margin: 0 auto;
-}
-
-
-@media screen and (max-width: 991px) {
-    .achi-sec {
-        display: block;
-    }
-    .achi-div2{
-        margin-top: 2rem;
-    }
-}
-@media screen and (max-width: 640px) {
-    .achi-div2{
-        display: block;
-    }
-    .achi-div1{
-        display: block;
-    }
-    .achi-div{
-        margin-top: 1rem;
-        width: 100%;
-    }
+@media (max-width: 375px) {
     .achievement-heading {
         font-size: 2rem;
     }
-    .achi-gradient{
-        font-size: 2rem;
+}
+
+@media (min-width: 376px) and (max-width: 480px) {
+    .achievement-heading {
+        font-size: 3rem;
+    }
+}
+
+@media (min-width: 481px) and (max-width: 640px) {
+    .achievement-heading {
+        font-size: 3.5rem;
+    }
+}
+
+@media (min-width: 641px) and (max-width: 767px) {
+    .achievement-heading {
+        font-size: 4rem;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+    .achievement-heading {
+        font-size: 4rem;
+    }
+}
+
+@media (min-width: 1025px) and (max-width: 1280px) {
+    .achievement-heading {
+        font-size: 4rem;
+    }
+}
+
+@media (min-width: 1281px) and (max-width: 1440px) {
+    .achievement-heading {
+        font-size: 4rem;
+    }
+}
+
+@media (min-width: 1441px) and (max-width: 1920px) {    
+    .achievement-heading {
+        font-size: 4rem;
+    }
+}
+
+@media (min-width: 1921px) {
+    .achievement-heading {
+        font-size: 4rem;
     }
 }
