--- a/src/Components/CSS/Testimonial.css
+++ b/src/Components/CSS/Testimonial.css
@@ -15,10 +15,56 @@
     background-position: 0%;
 }
 
+@media (max-width: 375px) {
+    .testimonial-heading {
+        font-size: 2rem;
+    }
+}
 
-@media (max-width: 640px) {
-    .testimonial-heading{
-        font-size: 2.5rem;
-        padding: 0px 10px;
+@media (min-width: 376px) and (max-width: 480px) {
+    .testimonial-heading {
+        font-size: 3rem;
+    }
+}
+
+@media (min-width: 481px) and (max-width: 640px) {
+    .testimonial-heading {
+        font-size: 3.5rem;
+    }
+}
+
+@media (min-width: 641px) and (max-width: 767px) {
+    .testimonial-heading {
+        font-size: 4rem;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+    .testimonial-heading {
+        font-size: 4rem;
+    }
+}
+
+@media (min-width: 1025px) and (max-width: 1280px) {
+    .testimonial-heading {
+        font-size: 4rem;
+    }
+}
+
+@media (min-width: 1281px) and (max-width: 1440px) {
+    .testimonial-heading {
+        font-size: 4rem;
+    }
+}
+
+@media (min-width: 1441px) and (max-width: 1920px) {
+    .testimonial-heading {
+        font-size: 4rem;
+    }
+}
+
+@media (min-width: 1921px) {
+    .testimonial-heading {
+        font-size: 4rem;
     }
 }
