--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,38 @@
 @import "tailwindcss";
 @import "tailwindcss";
 
+@keyframes floatParticle {
+    0% {
+        transform: translateY(0);
+        opacity: 0.6;
+    }
+
+    50% {
+        transform: translateY(-20px);
+        opacity: 1;
+    }
+
+    100% {
+        transform: translateY(0);
+        opacity: 0.6;
+    }
+}
+
+
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
     width: 100%;
     height: 100vh;
-    font-family: "Poppins", sans-serif;
+    font-family: "Poppins", sans-serif !important;
     font-optical-sizing: auto;
     font-size: 1.1rem;
-    /* overflow-x: auto; */
+    overflow-x: hidden;
 }
 
 body::-webkit-scrollbar-track {
