--- a/src/Components/CSS/Specialities.css
+++ b/src/Components/CSS/Specialities.css
@@ -15,58 +15,27 @@
     background-size: 400%;
     background-position: 0%;
 }
-
-/* Pediatrics */
 .pedi-bg-div {
     background-image: linear-gradient(to right, rgb(244 162 97 / 0.9), rgb(42 157 143 / 0.9));
 }
-
-/* General Surgery */
-table,
-tr,
-td, th {
-    border: 1px solid black;
-    margin-top: 10px;
-}
-
-/* Floor Plan */
-.floor-div{
-    display: flex;
-    justify-content: center;
-}
-
-@media screen and (max-width: 991px) {
-    .spec-hero-heading{
-        font-size: 2rem;
-    }
-
-    .spec-heading {
-        font-size: 2rem;
-    }
-
-    .spec-sub-heading {
-        font-size: 1.5rem;
-    }
-
-    .spec-text {
-        font-size: 1rem;
+@media (max-width: 375px) {
+    .spec-hero{
+        padding-top: 15rem;
     }
 }
 
-@media screen and (max-width: 640px) {
-    .spec-hero-heading{
-        font-size: 2rem;
-    }
+@media (min-width: 376px) and (max-width: 480px) {}
 
-    .spec-heading {
-        font-size: 1.5rem;
-    }
+@media (min-width: 481px) and (max-width: 640px) {}
 
-    .spec-sub-heading {
-        font-size: 1rem;
-    }
+@media (min-width: 641px) and (max-width: 767px) {}
 
-    .spec-text {
-        font-size: 12px;
-    }
-}
+@media (min-width: 768px) and (max-width: 1024px) {}
+
+@media (min-width: 1025px) and (max-width: 1280px) {}
+
+@media (min-width: 1281px) and (max-width: 1440px) {}
+
+@media (min-width: 1441px) and (max-width: 1920px) {}
+
+@media (min-width: 1921px) {}
