--- a/src/Components/CSS/DocProfile.css
+++ b/src/Components/CSS/DocProfile.css
@@ -1,9 +1,3 @@
-.doc-profile {
-    width: 80%;
-    height: auto;
-    margin-top: 20rem;
-}
-
 .doc-heading {
     font-size: 3rem;
     font-weight: 700;
@@ -22,22 +16,147 @@
     background-position: 0%;
 }
 
-@media screen and (max-width: 991px) {
+@media (max-width: 375px) {
     .doc-heading {
         font-size: 2rem;
     }
 
-    .spec-text {
+    .doc-subheading {
         font-size: 1rem;
+    }
+
+    .doctor-div {
+        padding-top: 6.5rem;
+        width: 80%;
+        margin: 0 auto;
     }
 }
 
-@media screen and (max-width: 640px) {
+@media (min-width: 376px) and (max-width: 480px) {
     .doc-heading {
+        font-size: 3rem;
+    }
+
+    .doc-subheading {
+        font-size: 1rem;
+    }
+
+    .doctor-div {
+        padding-top: 6.5rem;
+        width: 80%;
+        margin: 0 auto;
+    }
+}
+
+
+@media (min-width: 481px) and (max-width: 640px) {
+    .doc-heading {
+        font-size: 3.5rem;
+    }
+
+    .doc-subheading {
+        font-size: 1rem;
+    }
+
+    .doctor-div {
+        padding-top: 6.5rem;
+        width: 80%;
+        margin: 0 auto;
+    }
+}
+
+@media (min-width: 641px) and (max-width: 767px) {
+    .doc-heading {
+        font-size: 4rem;
+    }
+
+    .doc-subheading {
         font-size: 1.5rem;
     }
 
-    .doc-text {
-        font-size: 12px;
+    .doctor-div {
+        padding-top: 8rem;
+        width: 80%;
+        margin: 0 auto;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+    .doc-heading {
+        font-size: 4rem;
+    }
+
+    .doc-subheading {
+        font-size: 1.5rem;
+    }
+
+    .doctor-div {
+        padding-top: 8rem;
+        width: 80%;
+        margin: 0 auto;
+    }
+}
+
+@media (min-width: 1025px) and (max-width: 1280px) {
+    .doc-heading {
+        font-size: 4rem;
+    }
+
+    .doc-subheading {
+        font-size: 1.5rem;
+    }
+
+    .doctor-div {
+        padding-top: 9rem;
+        width: 80%;
+        margin: 0 auto;
+    }
+}
+
+@media (min-width: 1281px) and (max-width: 1440px) {
+    .doc-heading {
+        font-size: 4rem;
+    }
+
+    .doc-subheading {
+        font-size: 1.5rem;
+    }
+
+    .doctor-div {
+        padding-top: 10rem;
+        width: 80%;
+        margin: 0 auto;
+    }
+}
+
+@media (min-width: 1441px) and (max-width: 1920px) {
+    .doc-heading {
+        font-size: 4.5rem;
+    }
+
+    .doc-subheading {
+        font-size: 1.5rem;
+    }
+
+    .doctor-div {
+        padding-top: 12rem;
+        width: 80%;
+        margin: 0 auto;
+    }
+}
+
+@media (min-width: 1921px) {
+    .doc-heading {
+        font-size: 5rem;
+    }
+
+    .doc-subheading {
+        font-size: 2rem;
+    }
+
+    .doctor-div {
+        padding-top: 15rem;
+        width: 80%;
+        margin: 0 auto;
     }
 }
